<resources>
    <string name="app_name">Смачна Абетка</string>
    <string name="app_splash">Смачна \nАбетка</string>
    <string name="app_about">YummyAlfabet</string>
    <string name="app_table">Усі літери</string>

    <string name="img_splashscreen">SplashScreen</string>
    <string name="title1_splashscreen">СМАЧНА</string>
    <string name="title2_splashscreen">АБЕТКА</string>

    <string name="title_aboutscreen">Про додаток</string>
    <string name="version_aboutscreen">версія: 1.0</string>
    <string name="descrip_aboutscreen">Це простой та зручний додаток, для вивчення абетки малюками
        віком від 3+ років. \nБез реклами. \nБез доступу к приватним данним.</string>
    <string name="autor_aboutscreen">Автор: Войтенко Андрій Валентинович
        \ne-mail: viy.2005 @ gmail.com</string>
    <string name="ps_aboutscreen">Це моя перша робота. З годом я планю написати ще де кілько додаткив
        для дітей. Допомогу дизайнерів прийму з вдячністью.</string>

    <string-array name="alfabet">
        <item>А</item>      // 00 а
        <item>Б</item>      // 01 б
        <item>В</item>      // 02 в
        <item>Г</item>      // 03 г
        <item>Ґ</item>      // 04 ґ
        <item>Д</item>      // 05 д
        <item>Е</item>      // 06 е
        <item>Є</item>      // 07 є
        <item>Ж</item>      // 08 ж
        <item>З</item>      // 09 з
        <item>И</item>      // 10 и
        <item>І</item>      // 11 і
        <item>Ї</item>      // 12 ї
        <item>Й</item>      // 13 й
        <item>К</item>      // 14 к
        <item>Л</item>      // 15 л
        <item>М</item>      // 16 м
        <item>Н</item>      // 17 н
        <item>О</item>      // 18 о
        <item>П</item>      // 19 п
        <item>Р</item>      // 20 р
        <item>С</item>      // 21 с
        <item>Т</item>      // 22 т
        <item>У</item>      // 23 у
        <item>Ф</item>      // 24 ф
        <item>Х</item>      // 25 х
        <item>Ц</item>      // 26 ц
        <item>Ч</item>      // 27 ч
        <item>Ш</item>      // 28 ш
        <item>Щ</item>      // 29 щ
        <item>ь</item>      // 30 ь
        <item>Ю</item>      // 31 ю
        <item>Я</item>      // 32 я
    </string-array>
    <string-array name="textSonet">
        <item>Абрикоси - солоденькі, \nНавіть ті, які маленьки, \nАле я прошу у тата \nМені більші купувати.</item> // А
        <item>Ми сьогодні їли \nБананчики спілі. \nЗелені бананчики \nНехай їдять мавпочки!</item> // Б
        <item>Вишні солоденькі \nЇла дівчинка маленька, \nЇла і сміялася: \nКисленька попалася!</item> // В
        <item>Груші падають в траву. \nЯ одну собі зірву, \nБо ті груші, шо лежать, \nЗлії оси вже їдять.</item> // Г
        <item>Ґоґоль-моґоль колотили, \nҐоґоль-моґоль всі любили. \nОт і я, щоб не хворіти, \nҐоґоль-моголь буду пити.</item> // Ґ
        <item>Довга динька наче скринька, \nЗернятка ховає. \nЯ б відрізав собі скибку, \nНожика не має.</item> // Д
        <item>Ескімо у шоколаді \nТак сподобалося Наді, \nЩо здалося: ескімо \nНіби з’їлося само.</item> // Е
        <item>Є малинка у Галинки, \nє суничка у Марічки, \nГумка є у Василька, \nАле гума та липка!</item>  // Є
        <item>Журавлино, журавлино, \nЧому звешся журавлино? \nКажуть ягоди малі: \n- Бо нас люблять журавлі.</item> // Ж
        <item>Запіканку запивали \nСолоденьким ми узваром, \nА узвару наварили \nІз тих фруктів, що сушили.</item> // З
        <item>Пив Тарасик лимонад, \nЯк ішов гуляти в сад. \nЯк прийшов із саду, \nЗнову просить лимонаду.</item> // И
        <item>Інжир синій, інжир білий \nМи збирали, та не їли, \nМарлею прикрили, \nНа зиму сушили.</item> // І
        <item>Їли діти, їли \nЧерешеньки спілі, \nА які не спілі, \nТих вони не їли!</item> // Ї
        <item>Йогуртів фруктових \nНакупили знову, \nЗ ананасом і суницею, \nЗ персиком і полуницею.</item> // Й
        <item>Кавунчики на баштані \nНе сподобалися Мані: \nМаня любить смакувати \nТі, що вдома ріже тато.</item> // К
        <item>Лимончики нарізали, \nГусто цукром посипали, \nБо вони хоч і корисні, \nТа без цукру дуже кислі.</item> // Л
        <item>Мандарини для дитини \nКупувала ненька, \nБо корисні мандарини \nДуже смачненькі.</item> // М
        <item>Ми горіхову нугу \nЇли і хвалили, \nПотім пальчики липки \nДовго милом мили.</item> // Н
        <item>Ожина схожа на малину, \nА росте під лісом. \nРви ожину вітаміну, \nКолючок не бійся!</item> // О
        <item>Коли персики доспіли, \nЇх оса кусюча їла. \nЯ сказав отій осі: \n- Мої персики усі.</item> // П
        <item>У ріжок-пиріжок \nЯблучок нарізали. \nІ вони в нім запеклися, \nСтали дуже ніжними.</item> // Р
        <item>Сливка впала на солому, \nНаступив на сливку слоник. \nМавпа слоника сварила: \n- Краще б я ту сливку з’їла.</item> // С
        <item>Терен - сині сливочки, \nГілочки колючі, \nМи їмо їх з медом, \nБо вони кислючі.</item> // Т
        <item>Урюк влітку насушили, \nА зимою ми помили. \nКісточки виймаємо - \nДрузів пригощаємо!</item> // У
        <item>Фініки для фінікійців - \nСвіжі ласощі в тарілці, \nА для нас у магазинах - \nСухі фініки в корзинах.</item> // Ф
        <item>Хурму спілу ласо їли - \nНе втомилися хвалить, \nВід зеленої - скривились: \nТерпне в горлі, аж болить.</item> // Х
        <item>Півцитринки - для Маринки, \nА решта - Орисі, \nБо в цитринках вітаміни, \nНу такі корисні!</item> // Ц
        <item>Черешеньку солоденьку \nЇла донечка маленька. \nІ навчала мама доню: \n- Виплюнь кісточку в долоню.</item> // Ч
        <item>Шовковиця у садку \nНам щоліта рясно родить, \nХоч від ягід сині зуби, \nТа ми дуже їх любим.</item> // Ш
        <item>Що це? Що це? Розкажи \nІ як їсти покажи! \nПоки розказали, \nЩербету не стало.</item> // Щ
        <item>- М’який знак, м’який знак, \nТи до чого маєш смак? \n- Я люблю усе добреньке, \nСолоденьке і смачненьке!</item> // Ь
        <item>Рибна юшка не солодка, \nАле я її люблю: \nВип’ю чашку, вип’ю другу, \nПотім ще одну наллю.</item> // Ю
        <item>З яблучок червонобоких \nВидушили мені соку, \nА із білих і зелених \nПиріжки печуть для мене.</item> // Я
    </string-array>
</resources>
