<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageViewLogo"
        android:src="@drawable/img_viy"
        android:scaleType="centerInside"
        android:adjustViewBounds="true"
        android:layout_margin="20dp"
        android:maxHeight="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/title_aboutscreen"
        android:id="@+id/textViewLogo"
        android:layout_below="@+id/imageViewLogo"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/textViewName"
        android:layout_below="@+id/textViewLogo"
        android:gravity="center_horizontal"
        android:layout_margin="20dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version_aboutscreen"
        android:id="@+id/textViewVersion"
        android:layout_below="@+id/textViewName"
        android:layout_centerHorizontal="true"
        android:lineSpacingMultiplier="1.5"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descrip_aboutscreen"
        android:id="@+id/textViewDescrip"
        android:layout_below="@+id/textViewVersion"
        android:layout_centerHorizontal="true"
        android:gravity="fill_horizontal"
        android:layout_margin="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/autor_aboutscreen"
        android:id="@+id/textViewAutor"
        android:layout_below="@+id/textViewDescrip"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ps_aboutscreen"
        android:id="@+id/textView"
        android:layout_below="@+id/textViewAutor"
        android:layout_margin="10dp" />

</RelativeLayout>