<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="start"
    android:weightSum="10"
    android:gravity="fill_vertical"
    android:background="#FFFFFF"
    android:clickable="true"
    android:id="@+id/linearLayout1">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title1_splashscreen"
        android:gravity="center_horizontal"
        android:id="@+id/textView1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title2_splashscreen"
        android:gravity="center_horizontal"
        android:id="@+id/textView2"
        android:textIsSelectable="false" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/img_startscreen"
        android:adjustViewBounds="true"
        android:contentDescription="@string/img_splashscreen"
        android:scaleType="fitStart" />

</LinearLayout>